# pocket-accountant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ai_gateway.py  alembic.ini  api.py  config.py  container.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  router.py  tasks.py  worker.py
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260310_0002_marketplace_connections.py  20260405_0003_subscriptions_and_user_fields.py  20260414_0004_admin_metrics_and_activity.py
backend/: app.py  dependencies.py  entrypoint.py
backend/integrations/: ozon_performance.py  ozon_seller.py
backend/repositories/: backend_events.py  events.py  finance.py  law_updates.py  marketplace_connections.py  ozon_data.py  ozon_insights.py  reminders.py  users.py  (+1 more)
bot/: backend_client.py  callbacks.py  entrypoint.py  keyboards.py  messages.py  middleware.py  runtime.py
data/: calendar_templates.demo.json  marketplace_analytics_company_cards.json
deploy/: deploy.sh  docker-compose.prod.yml
docker/: Dockerfile  entrypoint.sh
docs/: REFACTORING_PLAN.md  TESTING.md  marketplace_analytics_company_cards.md  marketplace_analytics_extraction_report.json  solution-architecture.md
migrations/: env.py
prompts/: finance_classification.md  law_update_summary.md  legal_qa.md
scripts/: backup_db.sh  post_ops.py  seed_db.py  set_webhook.py  vpn_test_runner.sh
shared/: config.py  logging.py  secrets.py
tests/: conftest.py  test_event_policies.py  test_finance_and_tax.py  test_profile_matching.py
worker/: entrypoint.py  tasks.py
(+155 files in other folders)
