[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-accountant-bot"
version = "0.1.0"
description = "Pocket Accountant — Telegram AI accountant bot for Russian entrepreneurs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiogram>=3.4,<4.0",
  "alembic>=1.13,<2.0",
  "apscheduler>=3.10,<4.0",
  "asyncpg>=0.29,<1.0",
  "cryptography>=42.0,<46.0",
  "fastapi>=0.111,<1.0",
  "feedparser>=6.0,<7.0",
  "gspread>=6.0,<7.0",
  "google-auth>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "openai>=1.0,<2.0",
  "pydantic-settings>=2.2,<3.0",
  "python-json-logger>=2.0,<3.0",
  "redis>=5.0,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "tenacity>=8.2,<9.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<8.0",
  "aiosqlite>=0.20,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "__pycache__"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["shared", "bot", "backend", "worker"]
omit = ["*/migrations/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"bot/handlers/__init__.py" = ["F401"]
"tests/**" = ["F841"]
